AUTOMATION Added site report plugins